Remove time-varying prespawn mort from all output plots

--- a/03-post-process/output-plots-children/02-mcmc-diags.Rmd
+++ b/03-post-process/output-plots-children/02-mcmc-diags.Rmd
@@ -367,8 +367,8 @@ summs_out = rbind(summs_out, tmp_summ)
 
 # Pre-spawn Survival
 L1 = "Pre-spawn Survival"
-L2 = c("Mean", "Process SD", "Among-pop Correlation", "Realized")
-match = c("mu_phi_Sb_Sa", "sig_Lphi_Sb_Sa", "rho_Lphi_Sb_Sa", "^phi_Sb_Sa")
+L2 = c("Mean")
+match = c("mu_phi_Sb_Sa")
 tmp_diags = lapply(1:length(match), function(i) summarize_posterior(match[i], L1 = L1, L2 = L2[i]))
 tmp_summ = lapply(tmp_diags, function(i) summarize_diags(i))
 diags_out = rbind(diags_out, do.call(rbind, tmp_diags))
