--- a/03-post-process/output-plots-children/12-param-summaries.Rmd
+++ b/03-post-process/output-plots-children/12-param-summaries.Rmd
@@ -238,9 +238,7 @@ my_boxplot("rho_Lphi_Rb_Ra[2,1]", "Correlation (Origins)", ylim = c(-1,1), tickl
 
 ## Pre-spawn Survival
 
-```{r prespawn-surv-bxp, fig.width = p3_width, fig.height = p3_height}
+```{r prespawn-surv-bxp, fig.width = p4_width, fig.height = p4_height, out.width = "50%"}
 mypar(mfrow = c(1,3), mar = bp_mar, oma = bp_oma)
 my_boxplot("mu_phi_Sb_Sa", "Average Survival", ylim = ylim_01)
-my_boxplot("sig_Lphi_Sb_Sa[", "Process SD", ylim = c(0,2))
-my_boxplot(paste0("rho_Lphi_Sb_Sa", vcov_inds), "Correlation", ylim = c(-1,1), ticklab = vcov_labels); ref_line(h = 0)
 ```
