Remove references to sea lion survival
No longer part of model. Was discovered to be causing problems for ocean survival estimates (the stair-step mixed with a time-constant ocean survival was not working well)

--- a/03-post-process/compare-sim-to-obs.Rmd
+++ b/03-post-process/compare-sim-to-obs.Rmd
@@ -65,7 +65,7 @@ rm(model_info)
 
 ```{r select-years}
 # all of the years included in the model
-all_yrs = as.numeric(rownames(jags_data$phi_SL))
+all_yrs = as.numeric(rownames(jags_data$Ra_obs))
 
 # which is the first year of observation period?
 # may want to use 2001 to cut off years without hatchery supplementation
