Fix bug with identifying which years are simulated

--- a/03-post-process/compare-sim-to-obs.Rmd
+++ b/03-post-process/compare-sim-to-obs.Rmd
@@ -64,8 +64,8 @@ rm(model_info)
 ```
 
 ```{r select-years}
-# all of the years included in the model
-all_yrs = as.numeric(rownames(jags_data$Ra_obs))
+# the years included in the model
+all_yrs = as.numeric(dimnames(jags_data$Mb_obs)[[1]])
 
 # which is the first year of observation period?
 # may want to use 2001 to cut off years without hatchery supplementation
