Update scenario name

--- a/03-post-process/compare-sim-to-obs.Rmd
+++ b/03-post-process/compare-sim-to-obs.Rmd
@@ -9,7 +9,7 @@ output:
 params:
   scenario:
     label: "Scenario"
-    value: "base"
+    value: "base_vlong_sim"
     input: text
   thin_percent:
     label: "Proportion of Posterior Samples to Retain?"
