--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -214,7 +214,7 @@ ylim_01 = c(0, 1.05)
 ```{r capacity-vs-habitat, child = "output-plots-children/07-capacity-vs-habitat.Rmd", eval = params$include_capacity_vs_habitat}
 ```
 
-```{r misc-process-model, child = "output-plots-children/08-misc-process-model.Rmd", eval = params$include_misc_process_model}
+```{r misc-processes, child = "output-plots-children/08-misc-processes.Rmd", eval = params$include_misc_processes}
 ```
 
 ```{r equiv-rates, child = "output-plots-children/09-equiv-rates.Rmd", eval = params$include_equiv_rates}
